# RiskLabAI.py

./: .gitignore  .pypirc  CHANGELOG.md  DOCUMENTATION.md  EXTENDING.md  INSTALLATION.md  LICENSE  NAMING_CANON_2.0.0.md  README.md  STRUCTURE.md  documenter.py  pyproject.toml  requirements.txt  setup.cfg  style_guide.md  tree.py
.github/workflows/: ci.yml  publish.yml  pypi.yml  python-publish.yml  release.yml
RiskLabAI/: DataStructures.py  __init__.py  _deprecation.py  data_structures.py
RiskLabAI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
RiskLabAI/backtest/: BacktestStatistics.py  StrategyRisk.py  __init__.py  advanced_bet_sizing.py  backtest_overfitting_in_the_machine_learning_era_simulation.py  backtest_overfitting_simulation.py  backtest_statistics.py  backtest_synthetic_data.py  backtset_overfitting_in_the_machine_learning_era_simulation.py  backtset_overfitting_simulation.py  bet_sizing.py  multiple_testing.py  ou_trading_rules.py  probabilistic_sharpe_ratio.py  probability_of_backtest_overfitting.py  robust_statistics.py  sharpe_inference.py  strategy_risk.py  test_set_overfitting.py
RiskLabAI/backtest/validation/: __init__.py  adaptive_combinatorial_purged.py  bagged_combinatorial_purged.py  combinatorial_purged.py  cross_validator_controller.py  cross_validator_factory.py  cross_validator_interface.py  kfold.py  leakage_aware_hpo.py  path_adaptive_cpcv.py  path_bagged_cpcv.py  purged_kfold.py  walk_forward.py
RiskLabAI/cluster/: __init__.py  clustering.py
RiskLabAI/controller/: __init__.py  bars_initializer.py  data_structure_controller.py
RiskLabAI/core/: __init__.py  _builtins.py  base.py  registry.py
RiskLabAI/data/: __init__.py
RiskLabAI/data/denoise/: __init__.py  denoising.py  nercome.py
RiskLabAI/data/differentiation/: __init__.py  adaptive_differentiation.py  differentiation.py
RiskLabAI/data/distance/: __init__.py  codependence.py  distance_metric.py
RiskLabAI/data/labeling/: FinancialLabels.py  __init__.py  financial_labels.py  labeling.py
RiskLabAI/data/structures/: __init__.py  abstract_bars.py  abstract_imbalance_bars.py  abstract_information_driven_bars.py  abstract_run_bars.py  base.py  base_information_driven_bar.py  common_bar.py  create_ohlcv_dataframe.py  data_structures.py  data_structures_lopez.py  filtering.py  filtering_lopez.py  generate_time_bar_dataframe.py  generate_volume_bar_dataframe.py  hardened_information_driven_bars.py  hedging.py  imbalance_bar.py  imbalance_bar_old.py  imbalance_bars.py  infomation_driven_bars.py  information_driven_bar.py  run_bar.py  run_bar_old.py  run_bars.py  standard_bar.py  standard_bars.py  standard_bars_lopez.py  time_bar.py  time_bars.py  utilities.py  utilities_lopez.py
RiskLabAI/data/synthetic_data/: __init__.py  drift_burst_hypothesis.py  simulation.py  synthetic_controlled_environment.py
RiskLabAI/data/weights/: SampleWeight.py  __init__.py  sample_weights.py
RiskLabAI/ensemble/: BaggingClassifierAccuracy.py  __init__.py  bagging_classifier_accuracy.py  empirical_bagging_accuracy.py
RiskLabAI/features/: __init__.py  bekker_parkinson_volatility_estimator.py  clustered_mean_decrease_accuracy.py  clustered_mean_decrease_impurity.py  clustering.py  corwin_schultz.py  entropy.py  generate_synthetic_data.py  mean_decrease_accuracy.py  mean_decrease_impurity.py  orthogonal_features.py  single_feature_importance.py  test.ipynb  weighted_tau.py
RiskLabAI/features/entropy_features/: __init__.py  bias_corrected.py  entropy.py  kontoyiannis.py  lempel_ziv.py  plug_in.py  pmf.py  shannon.py
RiskLabAI/features/feature_importance/: FeatureImportance.ipynb  __init__.py  _clustered_mean_decrease_accuracy.py  clustered_feature_importance_mda.py  clustered_feature_importance_mdi.py  clustering.py  weighted_tau.py  (+10 more)
RiskLabAI/hpc/: __init__.py  hpc.py
RiskLabAI/modeling/: HyperParamterTuning.py  __init__.py  hyper_parameter_tuning.py
RiskLabAI/optimization/: __init__.py  hedging.py  hrp.py  hyper_parameter_tuning.py  nco.py
RiskLabAI/pde/: __init__.py  equation.py  model.py  solver.py
RiskLabAI/utils/: __init__.py  constants.py  ewma.py  momentum_mean_reverting_strategy_sides.py  progress.py  progress_bar.py  publication_plots.py  smoothing_average.py  update_figure_layout.py  utilities_lopez.py
RiskLabAI/validation/: PurgedKFoldCV.py  _combinatorial_purged_k_fold.py  _purged_k_fold.py  calculate_backtest_paths.py  calculate_cross_validation_score.py  calculate_embargo_times.py  combinatorial_purged_kfold.py  cross_validation_controller.py  cross_validation_model.py  cross_validator_controller.py  cross_validator_factory.py  cross_validator_interface.py  cross_validator_scoring.py  purged_k_fold.py  purged_kfold_cv.py  readme.md  remove_overlapping_train_times.py
risklabai/: __init__.py
src/: DataStructures.py
src/Ensemble/: BaggingClassifierAccuracy.py
src/data/: __init__.py
src/ensemble/: BaggingClassifierAccuracy.py
src/utils/: smoothing_average.py
src/validation/: PurgedKFoldCV.py
test/: test_consolidation.py  test_deprecation.py  test_performance.py
test/backtest/: test_advanced_bet_sizing.py  test_backtest_overfitting_simulation.py  test_backtest_statistics.py  test_backtest_synthetic_data.py  test_backtset_overfitting_in_the_machine_learning_era_simulation.py  test_bet_sizing.py  test_multiple_testing.py  test_ou_trading_rules.py  test_probabilistic_sharpe_ratio.py  test_probability_of_backtest_overfitting.py  test_robust_statistics.py  test_sharpe_inference.py  test_strategy_risk.py  test_test_set_overfitting.py  teste_backtest_overfitting_simulation.py
test/cluster/: test_clustering.py
test/controller/: test_bars_initializer.py  test_data_structure_controller.py
test/core/: test_base.py  test_builtin_parity.py  test_registry.py
test/ensemble/: test_bagging_classifier_accuracy.py
test/hpc/: test_hpc.py
test/optimization/: test_hedging.py  test_hrp.py  test_hyper_parameter_tuning.py  test_nco.py
test/pde/: test_pde_solver.py
test/utils/: test_ewma.py  test_momentum_mean_reverting_strategy_sides.py  test_progress.py
(+81 files in other folders)
