[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RiskLabAI"
version = "1.0.9"
authors = [
    { name = "RiskLab", email = "arian@risklab.ai" },
]
description = "Financial AI using Python, based on 'Advances in Financial Machine Learning' and 'Machine Learning for Asset Managers'."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "finance",
    "machine learning",
    "quantitative finance",
    "fintech",
    "de prado",
    "backtesting",
]

# --- CORE DEPENDENCIES ---
# These are fast to install and essential for the library's main functions.
dependencies = [
    "numpy>=1.22,<3",
    "pandas>=1.5",
    "scipy>=1.8",
    "scikit-learn>=1.1",
    "statsmodels>=0.13",
    "numba>=0.57",
    "joblib>=1.1",
    "ta>=0.10",
    "tqdm>=4.60",
    "sympy>=1.10",
]

# --- OPTIONAL DEPENDENCIES ---
# These are installed on-demand by users, e.g., pip install RiskLabAI[pde]
[project.optional-dependencies]
pde = ["torch"]
synth = ["quantecon"]
plot = ["matplotlib", "seaborn" , "plotly"]
dev = [
    "yfinance",
    "memory_profiler",
    "jupyterlab",
    "stable-baselines3",
    "gymnasium",
    "torchvision", # Often needed with torch
    "torchaudio",  # Often needed with torch
    "pytest",
]
all = [
    "RiskLabAI[pde]",
    "RiskLabAI[synth]",
    "RiskLabAI[plot]",
]


[project.urls]
Homepage = "https://github.com/RiskLabAI/RiskLabAI.py"
"Bug Tracker" = "https://github.com/RiskLabAI/RiskLabAI.py/issues"
Changelog = "https://github.com/RiskLabAI/RiskLabAI.py/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E501 deferred until the mechanical black formatting pass lands
ignore = ["E501"]
