[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RiskLabAI"
version = "2.0.1"
authors = [
    { name = "RiskLab", email = "arian@risklab.ai" },
]
description = "Financial AI using Python, based on 'Advances in Financial Machine Learning' and 'Machine Learning for Asset Managers'."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "finance",
    "machine learning",
    "quantitative finance",
    "fintech",
    "de prado",
    "backtesting",
]

# --- CORE DEPENDENCIES ---
# These are fast to install and essential for the library's main functions.
dependencies = [
    "numpy>=1.22,<3",
    "pandas>=1.5",
    "scipy>=1.8",
    "scikit-learn>=1.1",
    "statsmodels>=0.13",
    "numba>=0.57",
    "joblib>=1.1",
    "ta>=0.10",
    "tqdm>=4.60",
    "sympy>=1.10",
]

# --- OPTIONAL DEPENDENCIES ---
# These are installed on-demand by users, e.g., pip install RiskLabAI[pde]
[project.optional-dependencies]
pde = ["torch"]
synth = ["quantecon"]
plot = ["matplotlib", "seaborn" , "plotly"]
dev = [
    "yfinance",
    "memory_profiler",
    "jupyterlab",
    "stable-baselines3",
    "gymnasium",
    "torchvision", # Often needed with torch
    "torchaudio",  # Often needed with torch
    "pytest",
    # Linters pinned to match CI exactly (.github/workflows/ci.yml).
    "black==26.5.1",
    "ruff==0.15.17",
]
all = [
    "RiskLabAI[pde]",
    "RiskLabAI[synth]",
    "RiskLabAI[plot]",
]


[project.urls]
Homepage = "https://github.com/RiskLabAI/RiskLabAI.py"
"Bug Tracker" = "https://github.com/RiskLabAI/RiskLabAI.py/issues"
Changelog = "https://github.com/RiskLabAI/RiskLabAI.py/blob/main/CHANGELOG.md"

# Package only the library; the repo root also holds local-only appraisal
# harnesses under bench/, which must never be discovered or shipped.
[tool.setuptools.packages.find]
include = ["RiskLabAI*"]

[tool.pytest.ini_options]
testpaths = ["test"]
# Resolve `import RiskLabAI` from the repo root so a bare `pytest` works without
# an editable install (and regardless of any untracked bench/ working tree).
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E501 deferred until the mechanical black formatting pass lands
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Package __init__ files exist to re-export their submodules' public API.
"__init__.py" = ["F401", "F403", "F405"]
# pde/solver builds the networks from `from ...model import *`; the torch-only
# model module is intentionally left star-imported.
"RiskLabAI/pde/solver.py" = ["F403", "F405"]
# base.py re-exports the canonical interfaces lazily via module __getattr__,
# so the names listed in __all__ are resolved on access, not at definition.
"RiskLabAI/core/base.py" = ["F822"]
# importorskip("torch") must execute before the torch-dependent imports below
# it, so module-level imports cannot all sit at the top of the file.
"test/pde/test_pde_solver.py" = ["E402"]
