[metadata]
name = RiskLabAI
version = 0.0.60
author = RiskLab
author_email = arian@risklab.ai
description = Financial AI using Python.
long_description_content_type = text/markdown
url = https://github.com/RiskLabAI/RiskLabAI.py
project_urls =
    Bug Tracker = https://github.com/RiskLabAI/RiskLabAI.py/issues
    Changelog = https://github.com/RiskLabAI/RiskLabAI.py/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
packages = find:


[options.entry_points]
console_scripts =
    RiskLabAI = RiskLabAI.app:entry_point
